[gd_scene load_steps=34 format=3 uid="uid://ble8ph76k1ad2"]

[ext_resource type="Texture2D" uid="uid://bseq4gi3wb6nu" path="res://assets/Wizard/Wizard6.png" id="1"]
[ext_resource type="Texture2D" uid="uid://iv334igy2f57" path="res://assets/Wizard/Wizard5.png" id="2"]
[ext_resource type="Texture2D" uid="uid://ctw4cj43021m6" path="res://assets/Wizard/Wizard0.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cj4c6i4bqiwgr" path="res://assets/Wizard/Wizard4.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bx67ruhw5e8mk" path="res://assets/Wizard/Wizard1.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bpveg36y2c7lp" path="res://assets/Wizard/Wizard2.png" id="6"]
[ext_resource type="Texture2D" uid="uid://eb4s8105bcac" path="res://assets/Wizard/Wizard3.png" id="7"]
[ext_resource type="Script" path="res://common/entities/player/player.gd" id="8"]
[ext_resource type="Texture2D" uid="uid://d7p0yxryg777" path="res://assets/shadow.png" id="9"]
[ext_resource type="Texture2D" uid="uid://5eromldfsrvs" path="res://assets/Star.png" id="10"]
[ext_resource type="Texture2D" uid="uid://d2w2xj3u0ymy8" path="res://assets/Wizard/Wizard_death_2.png" id="11"]
[ext_resource type="Texture2D" uid="uid://b5nabpvjlts67" path="res://assets/Wizard/Wizard_death_3.png" id="12"]
[ext_resource type="Texture2D" uid="uid://chujjq5oyxcf1" path="res://assets/Wizard/Wizard_death_4.png" id="13"]
[ext_resource type="Texture2D" uid="uid://cls2gkogjm6c3" path="res://assets/Wizard/Wizard_death_1.png" id="14"]
[ext_resource type="Texture2D" uid="uid://ce8nqigmmjnw2" path="res://assets/Wizard/Wizard_death_0.png" id="15"]
[ext_resource type="Texture2D" uid="uid://diy7w3rutvnvs" path="res://assets/Wizard/Wizard_death_5.png" id="16"]
[ext_resource type="Texture2D" uid="uid://7d3sh66a0bej" path="res://assets/Wizard/Wizard_death_6.png" id="17"]
[ext_resource type="Texture2D" uid="uid://b34a8ai04r4qy" path="res://assets/Wizard/Wizard_death_7.png" id="18"]
[ext_resource type="PackedScene" uid="uid://cu6mupu6sae4k" path="res://common/entities/player_experience/player_experience.tscn" id="19_50iiu"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("14")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("13")
}, {
"duration": 1.0,
"texture": ExtResource("16")
}, {
"duration": 1.0,
"texture": ExtResource("17")
}, {
"duration": 1.0,
"texture": ExtResource("18")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="2"]
radius = 21.0
height = 42.0

[sub_resource type="Animation" id="3"]
resource_name = "Attack"
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3a0ds"]
_data = {
"Attack": SubResource("3")
}

[sub_resource type="Animation" id="7"]
resource_name = "Spawn"
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hlhfm"]
_data = {
"Spawn": SubResource("7")
}

[sub_resource type="Gradient" id="4"]
offsets = PackedFloat32Array(0, 0.0993789, 0.832298, 1)
colors = PackedColorArray(0.886275, 0.403922, 0.756863, 0, 0.820313, 0.092926, 0.68961, 1, 0.867188, 0.823521, 0.35907, 1, 1, 0.968627, 0.631373, 0)

[sub_resource type="GradientTexture2D" id="5"]
gradient = SubResource("4")

[sub_resource type="ParticleProcessMaterial" id="6"]
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 200, 0)
scale_min = 0.0
scale_max = 0.0
color_ramp = SubResource("5")

[sub_resource type="Animation" id="8"]
resource_name = "Scaling"
length = 10000.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShootAnimationPlayer:playback_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2600),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.1, 10.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpawnAnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2597.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 10.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2600),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 15.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4sfh3"]
_data = {
"Scaling": SubResource("8")
}

[sub_resource type="Animation" id="9"]
resource_name = "Death"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-35, -114)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"set_physics_process"
}, {
"args": [],
"method": &"restart_game"
}]
}

[sub_resource type="Animation" id="10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": ["default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0cqr5"]
_data = {
"Death": SubResource("9"),
"RESET": SubResource("10")
}

[node name="Player" type="Node2D"]
script = ExtResource("8")
speed_int = 5

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.4)
z_index = -1
position = Vector2(-4, 1)
scale = Vector2(1.42771, 1)
texture = ExtResource("9")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -52)
scale = Vector2(4, 4)
sprite_frames = SubResource("1")

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -32)
shape = SubResource("2")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control_Player" type="Control" parent="Camera2D"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_left = -641.0
offset_top = -357.0
offset_right = 639.0
offset_bottom = 363.0

[node name="ProgressBar_Health" type="ProgressBar" parent="Camera2D/Control_Player"]
layout_mode = 0
offset_left = 90.0
offset_top = 21.0
offset_right = 390.0
offset_bottom = 48.0
rounded = true
show_percentage = false

[node name="Label_HP_Text" type="Label" parent="Camera2D/Control_Player"]
layout_mode = 0
offset_left = 31.0
offset_top = 23.0
offset_right = 71.0
offset_bottom = 46.0
text = "HP"

[node name="ShootAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3a0ds")
}
autoplay = "Attack"

[node name="SpawnAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hlhfm")
}
autoplay = "Spawn"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-8, -54)
emitting = false
process_material = SubResource("6")
texture = ExtResource("10")
one_shot = true
explosiveness = 0.57

[node name="ScalingAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4sfh3")
}
autoplay = "Scaling"

[node name="DeathAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0cqr5")
}

[node name="Experience_Player" parent="." instance=ExtResource("19_50iiu")]
offset_left = -123.0
offset_top = -354.0
offset_right = -123.0
offset_bottom = -354.0

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_hurtbox_body_exited"]
